--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "des-todo",
+  "name": "des-checklist",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,16 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.14",
+    "@mui/material": "^5.14.14",
+    "@prisma/client": "^5.4.2",
+    "@types/bcrypt": "^5.0.1",
+    "bcrypt": "^5.1.1",
+    "next": "13.5.5",
+    "next-auth": "^4.24.3",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "13.5.5"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "13.5.5"
+    "eslint-config-next": "13.5.5",
+    "prisma": "^5.4.2",
+    "typescript": "^5"
   }
 }
